cluster/apps/kube-system/traefik/app/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: traefik
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
